// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render empty Url 1`] = `
<div>
  No data available for
</div>
`;

exports[`Should render full Url 1`] = `
<div>
  No data available for
  https://adoption.gouv.fr
</div>
`;

exports[`Should render full Url with screenshot 1`] = `
<div
  className="fr-callout fr-mb-3w"
>
  <h4
    className="fr-callout__title"
  >
    <a
      href="https://adoption.gouv.fr"
      rel="noreferrer noopener"
      target="_blank"
    >
      https://adoption.gouv.fr
    </a>
  </h4>
  <p
    className="fr-callout__text"
  />
  <div>
    <img
      alt="Copie d'écran de https://adoption.gouv.fr"
      src="https://dashlord.incubateur.net/report/aHR0cHM6Ly9hY2Nlc2xpYnJlLmJldGEuZ291di5mcg==/screenshot.jpeg"
    />
  </div>
</div>
`;

exports[`Tools config Should render Url with limited tools 1`] = `
<div>
  No data available for
</div>
`;
